--- a/backend/package.json
+++ b/backend/package.json
@@ -10,10 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.1",
     "nodemon": "^3.1.10"
   },
-  "type": "module",
   "description": ""
 }
