arreglo inicio sesion

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "express": "^5.1.0",
     "fa6": "^2.0.1",
     "install": "^0.13.0",
+    "jwt-decode": "^4.0.0",
     "npm": "^11.4.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
