--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "dotenv": "^17.0.1",
-    "fa6": "^2.0.1"
+    "fa6": "^2.0.1",
+    "jwt-decode": "^4.0.0"
   }
 }
