--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "axios": "^1.10.0",
     "chart.js": "^4.4.9",
     "express": "^5.1.0",
     "fa6": "^2.0.1",
