--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^4.4.1",
     "axios": "^1.10.0",
     "chart.js": "^4.4.9",
+    "datepicker": "^0.0.0",
     "express": "^5.1.0",
     "fa6": "^2.0.1",
     "install": "^0.13.0",
@@ -20,6 +21,7 @@
     "npm": "^11.4.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0"
   },
