--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "concurrently": "^9.1.2"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
     "dotenv": "^17.0.1",
     "fa6": "^2.0.1",
-    "jwt-decode": "^4.0.0"
+    "jwt-decode": "^4.0.0",
+    "react-datepicker": "^8.4.0"
   }
 }
