--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "datepicker": "^0.0.0",
     "express": "^5.1.0",
     "fa6": "^2.0.1",
+    "file-saver": "^2.0.5",
     "install": "^0.13.0",
     "jwt-decode": "^4.0.0",
     "npm": "^11.4.0",
@@ -23,7 +24,8 @@
     "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.0"
+    "react-router-dom": "^7.6.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
