--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "concurrently": "^9.1.2"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "date-fns": "^4.1.0",
     "dotenv": "^17.0.1",
     "fa6": "^2.0.1",
