--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^17.0.1",
     "fa6": "^2.0.1",
     "jwt-decode": "^4.0.0",
+    "multer": "^2.0.2",
     "react-datepicker": "^8.4.0"
   }
 }
