--- a/package.json
+++ b/package.json
@@ -17,11 +17,16 @@
   },
   "dependencies": {
     "axios": "^1.11.0",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
-    "dotenv": "^17.0.1",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
     "fa6": "^2.0.1",
     "jwt-decode": "^4.0.0",
     "multer": "^2.0.2",
-    "react-datepicker": "^8.4.0"
+    "package": "^1.0.1",
+    "react-datepicker": "^8.4.0",
+    "tracer": "^1.3.0"
   }
 }
